added new paragraphs

--- a/fil.html
+++ b/fil.html
@@ -7,16 +7,39 @@
 </head>
 <body>
     <center>
-    <h1>Butwal Kalika Campus</h1>
-    <h2>ButWal Kalika Campus</h2>
-    <h3>Butwal Kalika Campus</h3>
-    <h4>Butwal Kalika Campus</h4>
-    <h5>Butwal Kalika Campus</h5>
-    <h6>Butwal Kalika Campus</h6>
-    </center>
-    <hr width="60%">
-    <p>  <b>Lorem</b> ipsum dolor sit amet consectetur adipisicing elit.<br><br> Non, quam aut praesentium doloribus eveniet tempora<i>consequatur</i> iusto qui totam error<br> ut beatae eligendi dolore <u>necessitatibus accusamus labore optio</u> ipsa ullam.</p>
-    
-    
-    <abbr title="this afajdflsakf">one</abbr>
-    <marquee behavior =""direction="up">HtML CSS </marquee>
+    <h1> About Me</h1>
+    </center><hr>
+    <marquee behaviour=""direcion="right""">Step by step,lesson by lesson,success is built by those who dare to begin!</marquee><hr>
+<p>
+    Hello! My name is Sapana Aryal.I am a student of
+     BKC,<br>Faculty-BCA, and currently learning web designing.<br>I am deeply passionate
+      about web design,coding,and technology. <br>Ever since I disovered the art of creating websites, 
+      I have been fascinated<br>by how design and functionlity work
+       together to make digital experiences seamless.<br>I love learning 
+       new techniques and exploring creative ways to make<br> websites more user-friendly
+        and visually appealing.<br><br>
+        <h2>
+            Web Designing is my passion.</h2><br><br>
+            I enjoy crafting digital experiences that are both <br>beutiful and functional.<br><br>
+            <u>
+Bringing ideas to life through design keeps me motivated!</u><br><br>
+
+    <h2><center>
+My Intrests & Skills</center>
+    </h2></centre> <hr width="40%">
+    <br><br>
+    1.<b>Programming:</b>HTML,CSS,JavaScript,Python<br>
+    2.Design:UI/UX principle,Graphic Design, <br>
+    Pesponsive Web Design<br>
+    3.<u>Hobbies</u>:Reding Design blogs,experimenting<br>
+    with new layouts playing around with color schemes<br><br>
+    I am consantly working on improving my wen development <br>
+    and design skills.Whether it's learning a new <br>
+    famework or testing different user interface design,<br>
+    I enjoy every step of the journey.if you share<br>
+    the same enthusiam ,fell free to connect wih me for<br>
+    collaboration and creative discussios!<br><br>
+    <hr>
+</p>
+</body>
+</html>
