--- a/fil.html
+++ b/fil.html
@@ -6,40 +6,45 @@
     <title>Sapana Aryal</title>
 </head>
 <body>
-    <center>
-    <h1> About Me</h1>
-    </center><hr>
-    <marquee behaviour=""direcion="right""">Step by step,lesson by lesson,success is built by those who dare to begin!</marquee><hr>
-<p>
-    Hello! My name is Sapana Aryal.I am a student of
-     BKC,<br>Faculty-BCA, and currently learning web designing.<br>I am deeply passionate
-      about web design,coding,and technology. <br>Ever since I disovered the art of creating websites, 
-      I have been fascinated<br>by how design and functionlity work
-       together to make digital experiences seamless.<br>I love learning 
-       new techniques and exploring creative ways to make<br> websites more user-friendly
-        and visually appealing.<br><br>
-        <h2>
-            Web Designing is my passion.</h2><br><br>
-            I enjoy crafting digital experiences that are both <br>beutiful and functional.<br><br>
-            <u>
-Bringing ideas to life through design keeps me motivated!</u><br><br>
-
-    <h2><center>
-My Intrests & Skills</center>
-    </h2></centre> <hr width="40%">
-    <br><br>
-    1.<b>Programming:</b>HTML,CSS,JavaScript,Python<br>
-    2.Design:UI/UX principle,Graphic Design, <br>
-    Pesponsive Web Design<br>
-    3.<u>Hobbies</u>:Reding Design blogs,experimenting<br>
-    with new layouts playing around with color schemes<br><br>
-    I am consantly working on improving my wen development <br>
-    and design skills.Whether it's learning a new <br>
-    famework or testing different user interface design,<br>
-    I enjoy every step of the journey.if you share<br>
-    the same enthusiam ,fell free to connect wih me for<br>
-    collaboration and creative discussios!<br><br>
-    <hr>
-</p>
+   <table border="1" cellspacing="0" width="500">
+    <tr>
+        <th>S.No</th>
+        <th> Name</th>
+       <th>Rollno.</th>
+    <th></th> 
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>Sapana</td>
+        <td>01</td>
+        
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>Kabita</td>
+        <td>02</td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>Yamuna</td>
+        <td>03</td>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>Sandhya</td>
+        <td>04</td>
+    </tr>
+<tr>
+    <td>5</td>
+    <td>Shrishti</td>
+    <td>o5</td>
+</tr>
+   </table>
+   <a href="https://www.youtube.com/?reload=9">youtube</a>
+   <p style="color:brown; background-color:blueviolet;">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt obcaecati possimus, 
+    temporibus necessitatibus quae quasi similique et odit repellendus.
+     Commodi nemo incidunt dolorem libero voluptate amet dicta inventore dignissimos magnam.
+   </p>
 </body>
 </html>
