--- a/index.html
+++ b/index.html
@@ -3,61 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sapana Aryal</title>
-    
+    <title>My Portfolio</title> 
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
    <nav class="nav" id="nav">
    <div class="navigation">
-    <a href="#four">Home</a>
-    <a href="#two">Service</a>
-    <a href="#three">Contact us</a>
-    <a href="#one">About us</a>
-    <a href="#five">logo</a>
-
+    <a href="#About Me">About Me</a>
+    <a href="#contact">Contact</a>
    </div>
    </nav>
    <main class="main" id="main">
-  <div class="one" id="one">
-    <h2>About us</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-       Iure praesentium inventore architecto eos, nulla maxime, 
-       illo, velit tempore repellat corrupti sit? Omnis
-       enim officiis voluptatibus eius saepe accusamus unde adipisci!</p>
+  <div class="About Me" id="About Me">
+    <h2>About Me</h2><br><center>
+     <img src="./image.jpeg"></center>
+    <p>Hello! My name is Sapana Aryal. I am a student of BKC,faculty-BCA,and
+       currently learning web desiging. I am deeply passionate 
+       about web design,coding and technology. Ever since 
+       I discover the art of creating websites. I have been
+        fascinated by how design and functionlity work together 
+        to make digital experiences seamless. I love learning new
+         techniques and exploring creative ways to make websites
+          more user-friendly and visually appealing. </p>  
   </div>
-  <div class="two" id="two">
-    <h2>Service</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, 
-      adipisicing elit. Est, quae maiores fugit
-       asperiores suscipit corporis et eaque voluptatem 
-       excepturi iusto laborum aliquam
-       consequatur deleniti iure, at illum rerum? Nemo, modi.</p>
+  <div class="contact" id="contact">
+    <h2>Contact</h2><br>
+    <p>Email:<a href=" mailto:sapanaaryal43@gmail.com">sapanaaryal43@gmail.com</a></p> <br>
+    <p>Facebook:<a href="https://facebook.com/Sapana Aryal"target="">Sapana Aryal</a></p><br>
+  </fieldset>
   </div>
-  <div class="three" id="three">
-    <h2>Contact Us</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing
-       elit. Dolore cum asperiores ducimus repellat excepturi
-        libero eligendi, maiores voluptates ratione maxime. Quo corrupti 
-        doloremque excepturi dignissimos impedit quas,
-       placeat in dolores!</p>
-
-  </div>
-  <div class="four" id="four">
-    <h1>Home</h1>
-  </div>
-  <div class="five" id="five">
-    <h1>logo</h1>
-    <img src="./WhatsApp Image 2025-05-26 at 09.14.24 (2).jpeg">
-  </div>
-  
-   </main>
-
+</main>
    <footer class="footer" id= "footer">
 <center>
-  <p style="color:white;">Copy right reserved @2024</p>
+  <p style="color:white;">Copy right reserved @2025</p>
 </center>
    </footer>
-   
    </body>
    </html>
