--- a/index.html
+++ b/index.html
@@ -7,36 +7,101 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-   <nav class="nav" id="nav">
-   <div class="navigation">
-    <a href="#About Me">About Me</a>
-    <a href="#contact">Contact</a>
-   </div>
-   </nav>
-   <main class="main" id="main">
-  <div class="About Me" id="About Me">
-    <h2>About Me</h2><br><center>
-     <img src="./image.jpeg"></center>
-    <p>Hello! My name is Sapana Aryal. I am a student of BKC,faculty-BCA,and
-       currently learning web desiging. I am deeply passionate 
-       about web design,coding and technology. Ever since 
-       I discover the art of creating websites. I have been
-        fascinated by how design and functionlity work together 
-        to make digital experiences seamless. I love learning new
-         techniques and exploring creative ways to make websites
-          more user-friendly and visually appealing. </p>  
-  </div>
-  <div class="contact" id="contact">
-    <h2>Contact</h2><br>
-    <p>Email:<a href=" mailto:sapanaaryal43@gmail.com">sapanaaryal43@gmail.com</a></p> <br>
-    <p>Facebook:<a href="https://www.facebook.com/sapana.aryal.12576">Sapana Aryal</a></p><br>
+  <nav>
+   <div class="logo">
+    <a href="#">Sapana Aryal</a></div>
+    <ul class="logo1">
+      <li><a href="#About">About</a></li>
+      <li><a href="#Education">Education</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section class="intro" id="intro">
+      <div class="intro1">
+        <h2>Welcome to my page</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate reiciendis natus ut porro voluptas quam quia veniam laudantium odit ipsa in commodi adipisci assumenda tempore, aliquid eius officia voluptatibus cumque?</p>
+<a href="#"><button>Facebook</button></a>
+<a href="#"><button>More</button></a>
+      </div>
+      <div class="intro2">
+        <img src="WhatsApp Image 2025-06-01 at 16.54.42.jpeg">
+      </div> 
+    </section>
+    <section class="about" id="about">
+<h2>About Me</h2>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae repellendus aut nostrum consectetur deleniti dolor. Harum iusto, vel, similique quidem fuga asperiores possimus dolore ullam, provident quaerat illo velit? Minima!</p>
+
+    </section>
+ 
+  <section class="education" id="education">
+    <h2>Education</h2>  
+    <div class="campus"> 
+      
+      <fieldset>
+      <legend><button>Bachelors Degree</button></legend>
+      <h2>Butwal Kalika Campus</h2>
+     <ul>
+      <li>Program:BCA</li>
+      <li>Year:2081-2085</li>
+
+     </ul>
+    
+    <a href="#"><button>Location</button></a>
+    </fieldset>
+</div>
+<div class="collage"><fieldset>
+  <legend><button> High School</button></legend>
+  <h2>Nabin Audhyogic K.B.K.S.School</h2>
+  <ul>
+    <li>Board:NEB</li>
+    <li>Year:2079-2080</li>
+  </ul>
+
+  <a href="#"><button>Location</button></a>
   </fieldset>
-  </div>
-</main>
-   <footer class="footer" id= "footer">
-<center>
-  <p style="color:white;">Copy right reserved @2025</p>
-</center>
-   </footer>
-   </body>
-   </html>
+</div>
+<div class="School">
+  <fieldset>
+  <legend><button>School</button></legend>
+  <h2>Dev Siddha English School</h2>
+  <ul>
+    <li>Year:2066-2077</li>
+  </ul>
+
+  <a href="#"><button>Location</button></a>
+</fieldset>
+</div>
+  </section>
+  <section class ="contact" id="contact">
+    <h2>Contact</h2>
+   
+   <ul>
+    <li><a href="https://th.bing.com/th/id/OIP.Kgb00CppWEx3SyjucN8_JQHaEo?rs=1&pid=ImgDetMain"><button>Phone no</button></a></li>
+    <li><a href="https://th.bing.com/th/id/OIP.AQRq2LbwmVxZAEIzI4X4LAHaE8?w=149&h=104&c=7&bgcl=bc2fd2&r=0&o=6&pid=13.1"><button>E-mail</button></a></li>
+   </ul> 
+
+
+  </section>
+  </main>
+  </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
