--- a/index.html
+++ b/index.html
@@ -3,22 +3,33 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta property="og:title" content="Anmol Chhetri" />
-<meta property="og:description" content="Welcome to Anmol Chhetri – Your guide to spiritual insights, transformative events, and uplifting news." />
-<meta property="og:url" content="https://www.anmolchhetri.com.np" />
+<meta property="og:title" content="Sapana Aryal" />
+<meta property="og:description" content="Welcome to Sapana Aryal. Your guide to spiritual insights, transformative events, and uplifting news." />
+<meta property="og:url" content="https://sapanaaryal.github.io/HTML-day-1/>
 <meta property="og:type" content="website" />
- <title>Anmol Chhetri - Personal Portfolio</title>
-    <meta name="description" content="Personal portfolio for Anmol Chhetri, BCA student from Butwal" />
-    <meta name="author" content="Anmol Chhetri" />
+ <title>Sapana Aryal - Personal Portfolio</title>
+    <meta name="description" content="Personal portfolio for Sapana Aryal, BCA student from Butwal" />
+    <meta name="author" content="Sapana Aryal" />
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
-  <nav class="nav" id="nav">
-   <div class="navigation">
-      <a href="#About Me">About Me</a>
-      <a href="#Education">Education</a>
-      <a href="#Contact">Contact</a>
-  </div>
+  <nav >
+    <div class="logo"><a href="#"><i class="fa-solid fa-house"></i>Sapana Aryal</a>
+    </div>
+   <ul class="logo1">
+     <li> <a href="#About Me">About Me</a></li>
+     <li> <a href="#Education">Education</a></li>
+     <li> <a href="#Contact">Contact</a></li>
+
+  </ul>
+  
+<select name="" id="">
+  <option value="">About</option>
+  <option value="">Education</option>
+  <option value="">Contact</option>
+</select>
+ 
   </nav>
   <main>
     <section class="intro" id="intro">
@@ -37,7 +48,7 @@
     </section>
  
   <section class="education" id="education"> 
-    <h2>Education</h2> 
+    <h2><i class="fa-solid fa-user-graduate"></i>Education</h2> 
     <div class="campus"> 
       <fieldset>
       <legend><button>Bachelors Degree</button></legend>
@@ -79,9 +90,9 @@
     <h2>Contact</h2>
    
    <ul>
-    <li>Phone no:<a href="https://th.bing.com/th/id/OIP.Kgb00CppWEx3SyjucN8_JQHaEo?rs=1&pid=ImgDetMain">9749793531</a></li>
-    <li>E-mail:<a href="https://th.bing.com/th/id/OIP.AQRq2LbwmVxZAEIzI4X4LAHaE8?w=149&h=104&c=7&bgcl=bc2fd2&r=0&o=6&pid=13.1">sapanaaryal143@gmail.com</a></li>
-    <li>Facebook:<a href="https://www.facebook.com/sapana.aryal.12576">Sapana Aryal</a></li>
+    <li><i class="fa-solid fa-phone"></i>Phone no:<a href="https://th.bing.com/th/id/OIP.Kgb00CppWEx3SyjucN8_JQHaEo?rs=1&pid=ImgDetMain">9749793531</a></li>
+    <li><i class="fa-solid fa-envelope"></i>E-mail:<a href="https://th.bing.com/th/id/OIP.AQRq2LbwmVxZAEIzI4X4LAHaE8?w=149&h=104&c=7&bgcl=bc2fd2&r=0&o=6&pid=13.1">sapanaaryal143@gmail.com</a></li>
+    <li><i class="fa-brands fa-facebook"></i>Facebook:<a href="https://www.facebook.com/sapana.aryal.12576">Sapana Aryal</a></li>
 <li><a href="#"><button>More</button></a></li>
    </ul> 
 
